# ECS

./: .eslintrc.json  .gitignore  .npmrc  Agent.md  README.md  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.claude/: settings.local.json
.claude/commands/: push.md
.cursor/commands/: commit-push.md
agent/SKILLS/: commit-push.md
config/: paths.js  webpack.config.js
docs/: canvas-requirements.md  dependencies.md  overview.md  task-01-game-scene.md  task-02-indicator-system.md  task-03-resource-system.md  task-04-time-system.md  task-05-population.md  task-06-building.md  task-07-industry.md  task-08-mission.md  task-09-policy.md  task-10-event.md  task-11-ui.md  task-12-ending.md  task-13-balance.md  task-14-art.md  task-15-optimize.md  task-16-save.md  task-checklist.md
scripts/: build.js  start.js  sync-push.sh
src/: App.css  App.tsx  Game.css  Game.tsx  index.css  react-app-env.d.ts
src/canvas/: Canvas.css  Canvas.tsx  scene.ts
src/engine/: Component.ts  Entity.ts  Event.ts  Query.ts  Scene.ts  Stage.ts  System.ts
src/engine/bridge/: ECSBridge.ts  (+1 more)
src/engine/rich-text/detect-lang/: Cargo.toml
src/engine/rich-text/detect-lang/pkg/: detect_lang.d.ts  detect_lang.js  detect_lang_bg.wasm  detect_lang_bg.wasm.d.ts  package.json
src/engine/rich-text/detect-lang/src/: lib.rs
src/games/: index.ts
src/ui/: ContextMenu.css  ContextMenu.tsx  MindMapPanel.css  MindMapPanel.tsx  PropertyPanel.css  PropertyPanel.tsx  RightPanel.css  RightPanel.tsx  ToolPanel.css  ToolPanel.tsx  Toolbar.css  Toolbar.tsx
test/: hanzi.txt
(+232 files in other folders)
